--- a/index.html
+++ b/index.html
@@ -31,16 +31,54 @@
     <section>
         <h2>Sobre mí</h2>
         <div class="sobre-mi">
-        <div class="sober-mi-texto">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias maxime labore explicabo debitis veniam voluptatum similique 
-        recusandae natus, soluta porro consequuntur adipisci! Nostrum dolores ullam, aliquid consequatur exercitationem ipsam et?</p>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse dolor ipsam velit, nisi possimus doloribus commodi iure facere. 
-        Adipisci, rem magnam? Repellat sint, tempore labore quam ipsa hic culpa aspernatur?</p>
-        <div class="sobre-mi-imagen">
-            💻
+            <div class="sobre-mi-texto">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias maxime labore explicabo debitis veniam voluptatum similique 
+                    recusandae natus, soluta porro consequuntur adipisci! Nostrum dolores ullam, algo consequatur exercitationem ipsam et?
+                </p>
+                <br>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse dolor ipsam velit, nisi possimus doloribus commodi iure facere. 
+                    Adipisci, rem magnam? Repellat sint, tempore labore quam ipsa hic culpa aspernatur?
+                </p>
+            </div>
+            <div class="sobre-mi-imagen">
+                💻
+            </div>
         </div>
-        </div>
+    </section>
+
+    <section class="skills">
+        <h2>Habilidades</h2>
+        <div class="skills-container">
+            <div class="skills-card">
+                <h3>HTML & CSS</h3>
+                <p>Desarrollador de interfaces responsives y modernas</p>
+                <div class="skills-bar">
+                    <div class="skills-progress"></div>
+                </div>
+            </div>
+            <div class="skills-card">
+                <h3>JavaScript</h3>
+                <p>Programación interactiva y dinámica</p>
+                <div class="skills-bar">
+                    <div class="skills-progress"></div>
+                </div>
+            </div>
+            <div class="skills-card">
+                <h3>React</h3>
+                <p>Desarrollo de aplicaciones web modernas</p>
+                <div class="skills-bar">
+                    <div class="skills-progress"></div>
+                </div>
+            </div>
+            <div class="skills-card">
+                <h3>Node.js</h3>
+                <p>Desarrollo de APIs y Backend</p>
+                <div class="skills-bar">
+                    <div class="skills-progress"></div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
