--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@ Me apasiona     el mundo del desarrollo web, la programación, y sigo aprendiend
         <p>¿Tiene un proyecto en mente? ¡Me encantaría escucharte!</p>
         <div class="contactos">
             <a class="button" href="mailto:amoyafernandez93@gmail.com">Email</a>
-            <a class="button" href="https://github.com/Alexmf93">GitHub</a>
-            <a class="button" href="https://www.linkedin.com/in/amoya/">LinkedIn</a>
+            <a class="button" target="_blank" href="https://github.com/Alexmf93">GitHub</a>
+            <a class="button" target="_blank" href="https://www.linkedin.com/in/amoya/">LinkedIn</a>
         </div>
     </section>
     <footer>
