--- a/index.html
+++ b/index.html
@@ -110,46 +110,52 @@ Me apasiona     el mundo del desarrollo web, la programación, y sigo aprendiend
         <h2>Proyectos destacados</h2>
         <div class="skills-container">
             <div class="skills-card project-card">
-                <div class="project-image">
-                    <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Interfaz de una plataforma de e-commerce moderna" class="project-img">
-                </div>
-                <div class="project-content">
-                    <h3>E-Commerce</h3>
-                    <p>Plataforma de comercio electrónico completa con carrito de compras y pasarela de pago.</p>
-                    <div class="project-tags">
-                        <span>React</span>
-                        <span>Node.js</span>
-                        <span>MongoDB</span>
+                    <a href="">
+                    <div class="project-image">
+                        <img src="https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Interfaz de una plataforma de e-commerce moderna" class="project-img">
                     </div>
-                </div>
+                    <div class="project-content">
+                        <h3>E-Commerce</h3>
+                        <p>Plataforma de comercio electrónico completa con carrito de compras y pasarela de pago.</p>
+                        <div class="project-tags">
+                            <span>React</span>
+                            <span>Node.js</span>
+                            <span>MongoDB</span>
+                        </div>
+                    </div>
+                </a>
             </div>
             <div class="skills-card project-card">
-                <div class="project-image">
-                    <img src="https://images.unsplash.com/photo-1611224923853-80b023f02d71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Diseño de una aplicación de gestión de tareas en un tablet" class="project-img">
-                </div>
-                <div class="project-content">
-                    <h3>App de Tareas</h3>
-                    <p>Aplicación de gestión de tareas con funcionalidades de colaboración en tiempo real.</p>
-                    <div class="project-tags">
-                        <span>Vue.js</span>
-                        <span>Firebase</span>
-                        <span>CSS</span>
+                    <a href="">
+                    <div class="project-image">
+                        <img src="https://images.unsplash.com/photo-1611224923853-80b023f02d71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Diseño de una aplicación de gestión de tareas en un tablet" class="project-img">
                     </div>
-                </div>
+                    <div class="project-content">
+                        <h3>App de Tareas</h3>
+                        <p>Aplicación de gestión de tareas con funcionalidades de colaboración en tiempo real.</p>
+                        <div class="project-tags">
+                            <span>Vue.js</span>
+                            <span>Firebase</span>
+                            <span>CSS</span>
+                        </div>
+                    </div>
+                </a>
             </div>
             <div class="skills-card project-card">
-                <div class="project-image">
-                    <img src="img/e-comerce-img.png" alt="Captura de pantalla de un portafolio creativo con código y diseño" class="project-img">
-                </div>
-                <div class="project-content">
-                    <h3>Porfolio Creativo</h3>
-                    <p>Sitio web portafolio con animaciones avanzadas y diseño interactivo.</p>
-                    <div class="project-tags">
-                        <span>HTML</span>
-                        <span>CSS</span>
-                        <span>JavaScript</span>
+                    <a href="https://alejandrotiendadiscos.netlify.app/">
+                    <div class="project-image">
+                        <img src="img/e-comerce-img.png" alt="Captura de pantalla de un portafolio creativo con código y diseño" class="project-img">
                     </div>
-                </div>
+                    <div class="project-content">
+                        <h3>Tienda de vinilos</h3>
+                        <p>Colección personal de vinilos vintage en contrucción con funciones de búsqueda. Grandes clásicos.</p>
+                        <div class="project-tags">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
